# Auto-pptx

./: .gitignore  README.md  api_key.py  install.sh  requirements.txt  setup.cfg
pptx/: __main__.py  _main.py  main.py
