[metadata]
url = https://github.com/IsaacWritesCodeGithub/Auto-pptx
name = auto-pptx
version = 1.0.2
description = Automatically creates lyric powerpoints
author = IsaacWritesCode
author_email = isaacwritescode7@gmail.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    auto-pptx = powerpoint_creator.pptx.main:main
