[options]
install_requires =
    lyricsgenius>=3.0.1
    Gooey>=1.0.8.1
    python-pptx>=0.6.21
packages = find:
python_requires = >=3.9

[metadata]
url = https://github.com/IsaacWritesCodeGithub/Auto-pptx
name = auto-pptx
version = 1.0.13
description = Automatically creates lyric powerpoints
author = IsaacWritesCode
author_email = isaacwritescode7@gmail.com

[options.entry_points]
console_scripts =
    auto-pptx = pptx.main:main
